# headlessperfbench

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.headful.sh  pyproject.toml  run.py  run_scaling.py
analysis/: __init__.py  __main__.py  comparison_stats.py  container_metrics.py  scaling_comparison.py  scaling_quality.py  scaling_stats.py  utils.py
collector/: __main__.py  collector.py  comparator.py  config.py  parser.py  report.py  scaling.py
docs/: methodology.md  results_analysis.md
examples/: quickstart.md  urls_10.txt
tools/: minimize_hars.py
